--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,9 @@
     --accent: #2196F3;
     --secondary-bgc: #F5F4FA;
     --logo-color: #000000;
-    --link-color: rgba(255, 255, 255, 0.6);
+    --link-color: 0px 4px 4px rgba(0, 0, 0, 0.15);
     --button-color: #188CE8;
-    --btn-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    --button-shadow:rgba(0, 0, 0, 0.15);
     --header-border-color: #ececec;
     --portfolio-border: #EEEEEE;
 }
@@ -207,7 +207,7 @@ border-bottom: 1px solid var(--header-border-color);
         border-radius: 4px;
         width: 216px;
         height: 50px;
-        box-shadow: var(--btn-shadow);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         display: block;
         margin-right: auto;
         margin-left: auto;
@@ -475,7 +475,7 @@ border-bottom: 1px solid var(--header-border-color);
 .portfolio-list{
     display: flex;
     flex-wrap: wrap;
-    flex-basis: calc((100%-60px) / 3);
+    flex-basis: calc((100% - 60px) / 3);
     gap: 30px;
     padding-top: 34px;
 }
