--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
     --accent: #2196F3;
     --secondary-bgc: #F5F4FA;
     --logo-color: #000000;
-    --link-color: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    --link-color: rgba(255, 255, 255, 0.6);
     --button-color: #188CE8;
     --button-shadow:rgba(0, 0, 0, 0.15);
     --header-border-color: #ececec;
